--- a/4.1_1_Convolution+model+-+Step+by+Step+-+v2_1.ipynb
+++ b/4.1_1_Convolution+model+-+Step+by+Step+-+v2_1.ipynb
@@ -41,20 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
@@ -135,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -191,18 +182,18 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd710850d68>"
+       "<matplotlib.image.AxesImage at 0x10e99e358>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAUgAAACuCAYAAABUfpQYAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADrZJREFUeJzt3X+MHPV9xvH34x9xi8+OW+xgF9sYBYMEqWqurkshQhaB\nynasOH+gyrQEh7SyiqAFJVJCWolaQaWoqiJMXRHRA4NrK7QFlFjEDiJKzC/VAf8qBRtaB12EXSNs\nk9o+oKEXPv1j55z13c3t+mZ2Znb3eUkn9nZm5/u5Zfzczsx956OIwMzMRppQdgFmZlXlgDQzS+GA\nNDNL4YA0M0vhgDQzS+GANDNL4YA0s7Mi6YuSXii7jiI4IM3MUjggzcxSOCArRNInJb0rqTf5/jck\nHZW0tOTSrELGs59I2iHpbyS9JOmkpO9K+vW65f8q6W1JJyQ9J+myumXnStqavO4l4JOt/PmqxAFZ\nIRHxE+BrwGZJ5wAbgUcjYkephVmlZNhPbgK+BMwBBoH765ZtBxYCnwD2AFvqlv0D8L/J676UfHUF\neS529UjaClwIBPA7EfHzkkuyCjqb/UTSDmBnRNyZfH8psA/41Yj4xbB1ZwA/A2YAA9TC8Tcj4vVk\n+T3A1RHx6dx/qIrxJ8hq+kfgU8DfOxxtDGe7n7xV9/inwGRgpqSJku6V9BNJJ4H+ZJ2ZwCxg0iiv\n7QoOyIqR1APcBzwErKs/T2Q2ZJz7yby6x/OB/wOOAX8IrAKuBT4OLBgaBjhK7XB8+Gu7ggOyetYD\nuyLiT4DvAd8quR6rpvHsJzdKujQ5b/kN4PHk8Hoa8HPgOHAOcM/QC5LlT1IL4XOSQ/M1+f4o1eWA\nrBBJq4BlwC3JU18GeiX9UXlVWdVk2E/+CXgEeBv4FeDPk+c3UTtsPgzsB3YOe91tQE/yukeoXRTq\nCr5IY9YFkos0myOir+xa2ok/QZqZpZiU5cXJieF/pnZStx/4g4j42Sjr9QOngF8AgxGxOMu4ZjaS\npIGURcsLLaSDZDrElvS3wLsRca+kO4Ffi4ivjbJeP7A4Io6NezAzs4JlPcReBTyaPH4U+HzG7ZmZ\nVUbWgDwvIo4kj98GzktZL4AfSNotaW3GMc3MCtHwHKSkHwCzR1n0l/XfRERISjte/3REHJb0CeAZ\nSa9HxHMp460F1gJMnTr1ty+++OJGJZZu7969ZZfQtAsuuKDsEho6fvw4p06dUqvHmTx5ckyZMqXV\nw1gFvffee8ciYlaj9bKeg3wDWBoRRyTNAXZExCUNXrMOGIiIv2u0/d7e3nj22WfHXV9Rpk+fXnYJ\nTevrq/5fedx999309/e3PCB7enpi0aJFrR7GKujFF1/c3czF4qyH2Fv55V/VrwG+O3wFSVMlTRt6\nDPw+8GrGcc3MWi5rQN4LXCfpv6jN47wXTt+fbluyznnAC5L+HXgJ+F5EfD/juGZmLZfp7yAj4jjw\nmVGe/29gRfL4TeC3soxjZlYGz6SxjiFpmaQ3JB1M/i7XLBMHpHUESROp3fl6OXApcENy5xmzcXNA\nWqdYAhyMiDcj4kPgMWoTGczGzQFpneJ8zrzr9aHkObNxc0BaV5G0VtIuSbsGBwfLLscqzgFpneIw\nZ7YFmJs8d4aIeDAiFkfE4kmTMv0Rh3UBB6R1ipeBhZIulPQxYDW1iQxm4+ZfodYRImJQ0m3A08BE\n4OGIeK3ksqzNOSCtY0TENmBbwxXNmuRDbDOzFA5IM7MUDkgzsxS5BGSjObCquT9Z/oqk3jzGNTNr\npcwB2eQc2OXAwuRrLfBA1nHNzFotj0+QzcyBXQVsipqdwIzkDuRmZpWVR0A2MwfW82TNrO1U7iJN\n/VzZY8fcRtvMypNHQDYzB7apebJw5lzZmTNn5lCemdn45BGQzcyB3QrclFzNvgI4UddP28yskjJP\nNUybAyvpT5Pl36I2/WsFcBB4H7g567hmZq2Wy1zs0ebAJsE49DiAW/MYy8ysKJW7SGNmVhUOSDOz\nFA5IM7MUDkgzsxQOSDOzFA5IM7MUDkgzsxQOSDOzFA5IM7MUDkgzsxRu+2pWEdu3b89lO9OnT89l\nOwB9fX25bGfjxo25bKdo/gRpZpaiqKZdSyWdkLQv+borj3HNzFop8yF2XdOu66i1UnhZ0taI2D9s\n1ecjYmXW8czMilJU0y4zs7ZTVNMugCuTntjbJV2Ww7hmp0maJ+lHkvZLek3S7WXXZO2vqKvYe4D5\nETEgaQXwHWo9skeQtJZa72zmz5/PtGnTCipx/NasWVN2CU279tpryy6hofXr14/nZYPAVyJij6Rp\nwG5Jz4xyqsesaYU07YqIkxExkDzeBkyWNGpHrvqmXbNmzcqhPOsGEXEkIvYkj08BB3BrYcuokKZd\nkmZLUvJ4STLu8RzGNhtB0gLgcuDH5VZi7a6opl3XA7dIGgQ+AFYnfWrMciWpB3gCuCMiTo6y/PQp\nnClTphRcnbWbopp2bQA25DGWWRpJk6mF45aIeHK0dSLiQeBBgJ6eHv+StjF5Jo11hOQUzkPAgYj4\nZtn1WGdwQFqnuAr4AnBN3YytFWUXZe3NN6uwjhARLwAquw7rLP4EaWaWwgFpZpbCAWlmlsIBaWaW\nwhdpzCoir/sO5HlvgLzm7vuO4mZmHcYBaWaWwgFpZpbCAWlmlsIBaWaWIq+uhg9LekfSqynLJen+\npOvhK5J68xjXzKyV8voE+QiwbIzly6m1WFhI7V58D+Q0rplZy+QSkBHxHPDuGKusAjZFzU5ghqQ5\neYxtZtYqRZ2DbLbzIZLWStoladfRo0cLKc7MbDSVu0jjpl1mVhVFBWTDzodmZlVTVEBuBW5KrmZf\nAZyIiCMFjW1mNi653KxC0reBpcBMSYeAvwImw+nmXduAFcBB4H3g5jzGNTNrpby6Gt7QYHkAt+Yx\nlplZUSp3kcbMrCockGZmKRyQZmYpHJBmZinccsGsImbPnp3LdjZv3pzLdgCWLRvrFgvNO/fcc3PZ\nTtH8CdLMLIUD0swshQPSzCyFA9LMLIUD0jqKpImS9kp6quxarP05IK3T3A4cKLsI6wwOSOsYkuYC\nnwX6yq7FOkNRTbuWSjohaV/ydVce45oNcx/wVeCjsguxzlBU0y6A5yNiUfL1jZzGNQNA0krgnYjY\n3WC90y09BgcHC6rO2lVRTbvMWu0q4HOS+oHHgGskjZhSUt/SY9IkTySzsRV5DvLKpCf2dkmXFTiu\ndYGI+HpEzI2IBcBq4IcRcWPJZVmbK+pX6B5gfkQMSFoBfIdaj+wRJK2l1jubCRMm5DY/tZXynPva\nannNrW2l/v7+skswAwr6BBkRJyNiIHm8DZgsaWbKuqcPgSZM8EV2O3sRsSMiVpZdh7W/QhJI0mxJ\nSh4vScY9XsTYZmbjVVTTruuBWyQNAh8Aq5M+NWZmlVVU064NwIY8xjIzK4pP8pmZpfAfgplVxEUX\nXZTLdtatW5fLdqB97wSeF3+CNDNL4YA0M0vhgDQzS+GANDNL4YA0M0vhgDQzS+GANDNL4YA0M0vh\ngDQzS+GANDNLkTkgJc2T9CNJ+yW9Jun2UdaRpPslHUzuKt6bdVwzs1bLYy72IPCViNgjaRqwW9Iz\nEbG/bp3l1O4gvhD4XeCB5L9mZpWV+RNkRByJiD3J41PUmrafP2y1VcCmqNkJzJA0J+vYZmatlOs5\nSEkLgMuBHw9bdD7wVt33hxgZomZmlZLb7c4k9QBPAHdExMkM2zmjaZeZWVlySSBJk6mF45aIeHKU\nVQ4D8+q+n5s8N4KbdplZVeRxFVvAQ8CBiPhmympbgZuSq9lXACci4kjWsc3MWimPQ+yrgC8A/yFp\nX/LcXwDz4XTTrm3ACuAg8D5wcw7jmpm1VOaAjIgXADVYJ4Bbs45lZlYkn+QzM0vhgDQzS+GANDNL\n4YC0jiFphqTHJb0u6YCk3yu7Jmtv7ottnWQ98P2IuF7Sx4Bzyi7I2psD0jqCpI8DVwNfBIiID4EP\ny6zJ2p8Psa1TXAgcBTZK2iupT9LUsouy9uaAtE4xCegFHoiIy4H3gDuHryRpraRdknYNDg4WXaO1\nGQekdYpDwKGIGLqT1OPUAvMM9XP9J03yGSYbmwPSOkJEvA28JemS5KnPAPvHeIlZQ/4Vap3kz4At\nyRXsN/Gcf8vIAWkdIyL2AYvLrsM6R1FNu5ZKOiFpX/J1V9ZxzcxaraimXQDPR8TKHMYzMytEUU27\nzMzaTlFNuwCuTHpib5d0WZ7jmpm1gmr3ss1hQ7WmXc8Cfz28L42k6cBHETEgaQWwPiIWpmzndNMu\n4BLgjVwK/KWZwLGct9kK3VznBRExK+dtjiDpKPDTBqtV7f+D62msmZqa2sdyCcikaddTwNNj9KWp\nX78fWBwRhb+xknZFROWvdLrOaqjaz+d6GsuzpkKadkmanayHpCXJuMezjm1m1kpFNe26HrhF0iDw\nAbA68jq2NzNrkaKadm0ANmQdKycPll1Ak1xnNVTt53M9jeVWU24XaczMOo1vVmFmlqJrAlLSMklv\nSDooacR9AqtC0sOS3pH0atm1jKWZKabtrGr7S1Xfb0kTkxsUP1WBWnLvSdQVh9iSJgL/CVxH7b6B\nLwM3jDIdsnSSrgYGgE0R8amy60kjaQ4wp36KKfD5Kr6nZ6uK+0tV329JX6Z2g5DpZU8llvQotSnN\nfUM9iSLif7Jss1s+QS4BDkbEm0mvkseAVSXXNKqIeA54t+w6GunwKaaV21+q+H5Lmgt8Fugrs46k\nlqGeRA9BrSdR1nCE7gnI84G36r4/ROf8Yy5dgymm7ajS+0uF3u/7gK8CH5VcB7SoJ1G3BKS1SDLF\n9Angjog4WXY9na4q77eklcA7EbG7rBqGaaon0dnqloA8DMyr+35u8pxlkEwxfQLYMnz+fZur5P5S\nsff7KuBzybThx4BrJG0usZ6mehKdrW4JyJeBhZIuTE7erga2llxTW2tmimkbq9z+UrX3OyK+HhFz\nI2IBtffnhxFxY4n1tKQnUVcEZEQMArcBT1M7uf0vEfFauVWNTtK3gX8DLpF0SNIfl11TiqEpptfU\n3Sl+RdlF5aGi+0vHvt85GupJ9AqwCLgn6wa74s98zMzGoys+QZqZjYcD0swshQPSzCyFA9LMLIUD\n0swshQPSzCyFA9LMLIUD0swsxf8DtS5DRn4HHEIAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAUgAAACuCAYAAABUfpQYAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvFvnyVgAADrNJREFUeJzt3X+MHPV9xvH3Y5/jFM7Gqe3GLv5F\ng0GBRDKOS4NcIcuAZBxkRyqNTEswSSxXKDSgREqglShCKnX7RwqUiogeGIgtIDWocQkuSgWGoMaE\n8w8g2KF1EC62jPAPaueaxHDh0z927K7PO3fr29mZ2dnnJZ2yuzM7389thsc7M/edjyICMzM71Zii\nCzAzKysHpJlZCgekmVkKB6SZWQoHpJlZCgekmVkKB6SZNU3S9ZJeLLqOvDggzcxSOCDNzFI4IEtE\n0ickHZY0P3n+u5IOSFpUcGlWEqPZRyRtlvQ3kn4i6aik70v67brl/yzpHUlHJL0g6cK6ZZMlbUze\n9xPgE+38/crGAVkiEfFz4FvAOklnAGuBhyNic6GFWWm0sI9cB3wZmA4MAvfULdsEzAV+B9gGrK9b\n9o/Ar5P3fTn56RryXOzykbQROAcI4Pcj4ljBJVnJnM4+ImkzsCUibkmeXwDsAH4rIn4zZN1JwHvA\nJGCAWjh+OiJ+liy/E7g0Iv4w81+qhPwNspz+CfgU8A8OR0txuvvI23WP9wDjgCmSxkpaI+nnko4C\nbyXrTAGmAj0N3ts1HJAlI6kXuAt4ALi9/lyRGYx6H5lZ93gW8AFwEPgTYDlwOXAWMOf4MMABaofj\nQ9/bNRyQ5XM30B8Rq4AfAN8puB4rn9HsI9dKuiA5b3kHsCE5vJ4AHAMOAWcAdx5/Q7L8SWohfEZy\naL4y21+l3ByQJSJpObAEuCF56evAfEl/WlxVViYt7CPfBR4C3gE+Cnwtef0RaofN+4CdwJYh77sR\n6E3e9xC1i0JdwxdpzCouuUizLiL6iq6l0/gbpJlZip5W3pycHH6c2ondt4AvRMR7Ddb7DfBa8vS/\nI2JZK+Oa2ckkDaQsujLXQiqmpUNsSX8HHI6INZJuAT4WEd9qsN5ARPS2UKeZWe5aDcg3gEURsV/S\ndGBzRJzfYD0HpJl1nFbPQX48IvYnj98BPp6y3kcl9UvaIunzLY5pZpaLEc9BSvp3YFqDRX9Z/yQi\nQlLa19HZEbFP0u8Bz0p6LZlTOnSs1cBqgDPPPPMz55133oi/QNG2b99edAlNmz17dtElNGXPnj0H\nI2Jqu8cZN25cjB8/vt3DWMkcO3aMDz74QM2sm8sh9pD3PAQ8FREbhltv/vz58fzzz4+6trxMnDix\n6BKa1tfXGX/lsWrVqq0RsaDd4/T29sa8efPaPYyVzI4dOxgYGGgqIFs9xN7I//9l/Urg+0NXkPQx\nSeOTx1OAhdT+INXMrNRaDcg1wBWS/ovaXM41AJIWSDr+deWTQL+kV4DngDUR4YA0s9Jr6e8gI+IQ\ncFmD1/uBVcnj/wA+3co4ZmZF8EwaqwxJSyS9IWl38ne5Zi1xQFolSBpL7e7XVwIXANckd58xGzUH\npFXFxcDuiHgzIt4HHqN2n0OzUXNAWlWczcl3vt6bvGY2ag5I6yqSViezuvoHBweLLsdKzgFpVbGP\nk1sDzEheO0lE3B8RCyJiQU9PS3/EYV3AAWlV8TIwV9I5kj4CrKA2kcFs1PxPqFVCRAxKuhF4BhgL\nPBgRrxdclnU4B6RVRkQ8DTxddB1WHT7ENjNL4YA0M0vhgDQzS5FJQI40B1bSeEmPJ8tfkjQni3HN\nzNqp5YBscg7sV4D3IuJc4O+Bv211XDOzdsviG2Qzc2CXAw8njzcAl0lq6o6+ZmZFySIgm5kDe2Kd\niBgEjgCTMxjbzKxtSnWRpn6e7MGDB4sux8y6XBYB2cwc2BPrSOoBzgIODd1Q/TzZKVOmZFCamdno\nZRGQzcyBrW/udTXwbLTSTtHMLActTzVMmwMr6Q6gPyI2Ag8A35W0GzhMLUTNzEotk7nYjebARsRt\ndY9/DfxxFmOZmeWlVBdpzMzKxAFpZpbCAWlmlsIBaWaWwgFpZpbCAWlmlsIBaWaWwgFpZpbCAWlm\nlsIBaWaWwm1fzUpi06ZNmWxn4sSJmWwHoK+vL5PtrF27NpPt5M3fIM3MUuTVtOt6SQck7Uh+VmUx\nrplZO7V8iF3XtOsKau0WXpa0MSJ2Dln18Yi4sdXxzMzyklfTLjOzjpNX0y6AP5L0qqQNkmY2WG42\napJmSnpO0k5Jr0u6qeiarPPldRX7X4FHI+KYpD+j1gJ28dCVJK0GVgPMmjWLCRMm5FTe6K1cuXLk\nlUri8ssvL7qEdhoEvhER2yRNALZK+mGDUz1mTculaVdEHIqIY8nTPuAzjTZU37Rr6tSpGZRm3SIi\n9kfEtuTxL4BdND6SMWtaLk27JE2ve7qM2s5r1haS5gAXAS8VW4l1uryadn1N0jJqh0GHgetbHdes\nEUm9wBPAzRFxtMHyE6dxxo8fn3N11mnyatp1K3BrFmOZpZE0jlo4ro+IJxutExH3A/cD9Pb2uvWw\nDcszaawSJIlae+FdEfHtouuxanBAWlUsBL4ILK6bsbW06KKss/lmFVYJEfEioKLrsGrxN0gzsxQO\nSDOzFA5IM7MUDkgzsxS+SGNWElndeyDL+wNkNX/fdxQ3M6sYB6SZWQoHpJlZCgekmVkKB6SZWYqs\nuho+KOldST9NWS5J9yRdD1+VND+Lcc3M2imrb5APAUuGWX4lMDf5WQ3cl9G4ZmZtk0lARsQL1G6E\nm2Y58EjUbAEmDbnLuJlZ6eR1DrKpzoeSVkvql9R/4MCBnEozM2usVBdp3LTLzMokr4AcsfOhmVnZ\n5BWQG4HrkqvZnwWORMT+nMY2MxuVTG5WIelRYBEwRdJe4K+AcQAR8R1qDb2WAruBXwJfymJcM7N2\nyqqr4TUjLA/gq1mMZWaWl1JdpDEzKxMHpJlZCgekmVkKB6SZWQq3XDAriWnTpmWynXXr1mWyHYAl\nS4a7xULzJk+enMl28uZvkGZmKRyQZmYpHJBmZikckGZmKRyQVimSxkraLumpomuxzueAtKq5CdhV\ndBFWDQ5IqwxJM4DPAX1F12LVkFfTrkWSjkjakfzclsW4ZkPcBXwT+LDoQqwa8mraBfCjiJiX/NyR\n0bhmAEi6Cng3IraOsN6Jth6Dg4M5VWedKq+mXWbtthBYJukt4DFgsaRTppTUt/Xo6fFEMhtenucg\nL5H0iqRNki7McVzrAhFxa0TMiIg5wArg2Yi4tuCyrMPl9U/oNmB2RAxIWgr8C7Ue2SeRtJpa32zG\njBmT2dzUdspy3mu7ZTWv1qxb5PINMiKORsRA8vhpYJykKQ3WO3H4M2aML7Db6ETE5oi4qug6rPPl\nkkKSpklS8vjiZNxDeYxtZjZaeTXtuhq4QdIg8CtgRdKnxsystPJq2nUvcG8WY5mZ5cUn+szMUvgP\nwcxK4txzz81kO7fffnsm24HOvRN4VvwN0swshQPSzCyFA9LMLIUD0swshQPSzCyFA9LMLIUD0sws\nhQPSzCyFA9LMLIUD0swsRcsBKWmmpOck7ZT0uqSbGqwjSfdI2i3pVUnzWx3XzKzdspiLPQh8IyK2\nSZoAbJX0w4jYWbfOldTuID4X+APgvuR/zcxKq+VvkBGxPyK2JY9/Qa1p+9lDVlsOPBI1W4BJkqa3\nOraZWTtleg5S0hzgIuClIYvOBt6ue76XU0PUzKxUMrvdmaRe4Ang5og4OsptnNS0y8ysSJmkkKRx\n1MJxfUQ82WCVfcDMuuczktdO4qZdZlYmWVzFFvAAsCsivp2y2kbguuRq9meBIxGxv9WxzczaKYtD\n7IXAF4HXJO1IXvsLYBacaNr1NLAU2A38EvhSBuOambVVywEZES8CGmGdAL7a6lhmZnnyiT4zsxQO\nSDOzFA5IM7MUDkirDEmTJG2Q9DNJuyRdUnRN1tncF9uq5G7g3yLiakkfAc4ouiDrbA5IqwRJZwGX\nAtcDRMT7wPtF1mSdz4fYVhXnAAeAtZK2S+qTdGbRRVlnc0BaVfQA84H7IuIi4H+BW4auJGm1pH5J\n/YODg3nXaB3GAWlVsRfYGxHH7yS1gVpgnqR+vn9Pj88w2fAckFYJEfEO8Lak85OXLgN2DvMWsxH5\nn1Crkj8H1idXsN/Ec/6tRQ5Iq4yI2AEsKLoOq468mnYtknRE0o7k57ZWxzUza7e8mnYB/Cgirspg\nPDOzXOTVtMvMrOPk1bQL4BJJr0jaJOnCLMc1M2sH1e5lm8GGak27ngf+emhfGkkTgQ8jYkDSUuDu\niJjbYBsnmnYB5wNvZFLcyaYAB9uw3ax1c52zI2Jqxts8haQDwJ4RVivb/w+uZ3jN1NP0/pVJQCZN\nu54CnhmmL039+m8BCyIi9w9WUn9ElP5Kp+ssh7L9fq5neFnXk0vTLknTkvWQdHEy7qFWxzYza6e8\nmnZdDdwgaRD4FbAisjq2NzNrk7yadt0L3NvqWBm5v+gCmuQ6y6Fsv5/rGV6m9WR2kcbMrGp8swoz\nsxRdE5CSlkh6Q9JuSafcJ7AsJD0o6V1JPy26luE0M8W0k5VpfynrZy1pbHJz4qeKrgXa05OoKw6x\nJY0F/hO4gtp9A18GrmkwHbJwki4FBoBHIuJTRdeTRtJ0YHr9FFPg82X8TE9X2faXsn7Wkr5O7eYg\nE8swjVjSw9SmNPcd70kUEf/Tyja75RvkxcDuiHgz6VXyGLC84JoaiogXgMNF1zGSik8xLdX+UsbP\nWtIM4HNAX5F1HFfXk+gBqPUkajUcoXsC8mzg7brne6nOf8yFG2GKaScq7f5Sos/6LuCbwIcF13Fc\nW3oSdUtAWpskU0yfAG6OiKNF11NlZfmsJV0FvBsRW4uqoYGmehKdrm4JyH3AzLrnM5LXrAXJFNMn\ngPVD5993uNLtLyX7rBcCy5Ipw48BiyWtK7ak5noSna5uCciXgbmSzklO3q4ANhZcU0drZoppByvV\n/lK2zzoibo2IGRExh9pn82xEXFtwTW3pSdQVARkRg8CNwDPUTnB/LyJeL7aqxiQ9CvwYOF/SXklf\nKbqmFMenmC6uu1P80qKLykIJ95fKftYZO96T6FVgHnBnqxvsij/zMTMbja74BmlmNhoOSDOzFA5I\nM7MUDkgzsxQOSDOzFA5IM7MUDkgzsxQOSDOzFP8HFZNGQpvfmzEAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fd7108e8390>"
+       "<Figure size 360x288 with 2 Axes>"
       ]
      },
      "metadata": {},
@@ -300,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -336,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
